# 3D-Human-Pose-Optimization

./: CMakeLists.txt  README.md
data/test/: test_calib_data.json
data/test2/: intrinsic_pars_file_0.yaml  intrinsic_pars_file_1.yaml  intrinsic_pars_file_2.yaml  intrinsic_pars_file_3.yaml  optimized_pattern_pts.txt  pose_data_no_occl.json
include/: CalibrationInfo.h  CameraInfo.h  CameraOptimizer.h  Optimizer.h  PinholeCameraModel.h  Reader.h  minimization.h  utils.h
src/: CalibrationInfo.cpp  CameraInfo.cpp  CameraOptimizer.cpp  Optimizer.cpp  PinholeCameraModel.cpp  Reader.cpp  main.cpp  utils.cpp
